ch-09-Search/compiling_error.txt
/Users/writtic/Documents/repository/gameProgramming/ch-09-Search/Puzzle.cpp:117:22: error: unknown type name '_TCHAR'
int _tmain(int argc, _TCHAR* argv[])
                     ^
/Users/writtic/Documents/repository/gameProgramming/ch-09-Search/Puzzle.cpp:163:5: error: use of undeclared identifier 'exit'
                                exit(0);
                                ^
/Users/writtic/Documents/repository/gameProgramming/ch-09-Search/Puzzle.cpp:184:4: error: use of undeclared identifier 'exit'
                        exit(0);
                        ^
3 errors generated.
